<?xml version="1.0" encoding="utf-8"?>

<!-- Макет фрагмента (часть представления) -->

<!-- Вертикальный список -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <!-- Текстовое окно (используется специальный стиль) -->
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label"/>

    <!-- Поле для заполнения названия пресупления -->
    <EditText
        android:id="@+id/crime_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/crime_title_hint"/>

    <!-- Текстовое окно (используется специальный стиль) -->
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label"/>

    <!-- Кнопка с датой преступления -->
    <Button
        android:id="@+id/crime_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Wed Nov 14 11:56 EST 2018"/>

    <!-- Окошко для галочки, исправлено ли преступление -->
    <CheckBox
        android:id="@+id/crime_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_solved_label"/>

    <!-- Окошко для галочки, требуется полиция -->
    <CheckBox
        android:id="@+id/requires_police_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/requires_police_text"/>

    <!-- Кнопка выбора подозреваемого -->
    <Button
        android:id="@+id/crime_suspect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_suspect_text"/>

    <!-- Кнопка отправки отчёта о преступлении -->
    <Button
        android:id="@+id/crime_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_report_text"/>

</LinearLayout>

